    - Infinite Milestones: 
      You can now set a "next" value for a milestone. When that milestone is completed, a new milestone is automatically created at a higher count, depending on that "next" value. 
      Example: "1000 science packs, next: x10" would create "10000 science packs" when completed, then "100000 science packs", etc. You can also use "+" for adding instead of multiplying.
    - New "Compact list" Player Mod Setting, removes the "Completed at:" labels from the main view. Defaults to off.
  Changes:
    - Change presets to use infinite milestones. Existing sets won't be updated unless you reload them from the preset.
    - Labels now say "Killed at" and "Researched at" for kills and technologies
    - Replace "cargo rocket section" with "cargo rocket" in SE and SE+K2 presets
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2022-01-16
  Changes:
    - Add "Advanced pickaxe" to K2 and SE+K2 presets
    - Add debug commands to help debug and fix future crashes (use /h in-game to see them)
  Bugfixes:
    - Fix kill milestones unable to be imported
    - Attempt to fix a rare crash when a player's GUI becomes invalid for an unknown reason
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-11-29
  Bugfixes:
    - Fix crash when using research milestones
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-11-28
  Features:
    - Add "Initial preset" mod setting. You can paste an exported preset string that Milestones will load at the beginning of every new game. Useful for speedrunning practice.
    - Add "Kill" milestone type. Used to track biter kills (or any other kills, such as killing yourself with locomotives :) )
    - Add preset addons for Bob's Enemies, Armoured Biters, Cold Biters, Explosive Biters
  Changes: