@@ -49,6 +49,8 @@ settings_preset=Preset:
 settings_imported=Imported
 settings_import=Import
 settings_export=Export
+settings_export_encoded=Encoded:
+settings_import_description=Paste a plain JSON string or an encoded string.
 settings_back=Back
 settings_confirm=Confirm
 settings_add_item=Add Item
@@ -71,11 +73,11 @@ message_milestone_reached_kill_first=[img=milestones_main_icon_white] [font=defa
 message_milestone_reached_kill_more=[img=milestones_main_icon_white] [font=default-large-bold]Killed [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_milestone_reached_technology=[img=milestones_main_icon_white] [font=default-large-bold]Researched [color=green][img=__1__]__2____3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_settings_permission_denied=[color=red]Cannot change Milestones settings. You need "Mod Settings Changed" permissions.[/color]
-message_invalid_import_json=[color=red]Invalid import string. This string is not a valid JSON string.[/color]
+message_invalid_import_json=[color=red]Invalid import string. This string is not a valid JSON string or encoded string.[/color]
 message_invalid_import_type=[color=red]Invalid import string. Invalid type: [/color]
 message_invalid_import_quantity=[color=red]Invalid import string. Invalid quantity: [/color]
-message_invalid_import_next=[color=red]Invalid import string. Invalid next increment: [/color]
-message_invalid_next=[color=red]Invalid next increment: [/color]
+message_invalid_import_next=[color=red]Invalid import string. Invalid next value: [/color]
+message_invalid_next=[color=red]Invalid next value: [/color]
 message_invalid_initial_preset=[color=red]Milestones failed to load the initial preset from Mod Settings and will fall back to auto-detection. Error was:[/color]
 
 [milestones.commands]
